# Pantheon

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  history.txt  index.html  install.sh
.github/workflows/: build_all.yml  create_release.yml  main.yml  test_athena.yml  test_hermes.yml  test_talaria.yml  test_tartarus.yml  tests.yml
Mnemosyne/: Cargo.toml
Mnemosyne/src/: main.rs
Pantheon/: index.html
Pantheon/assets/: athena-122eb6ed4546e044.js  athena-122eb6ed4546e044.js.br  athena-1dc0fbf8fb4e367d.js  athena-1dc0fbf8fb4e367d.js.br  athena-311e9e67bfb8a69c.js  athena-311e9e67bfb8a69c.js.br  athena-3e033f9698884ec9.js  athena-3e033f9698884ec9.js.br  athena-59de48c81e617577.js  athena-59de48c81e617577.js.br  athena-6043851a49a667fc.js  athena-6043851a49a667fc.js.br  athena-64b0b815ad5948b8.js  athena-64b0b815ad5948b8.js.br  athena-73c561979751a1a6.js  athena-73c561979751a1a6.js.br  athena-8ed591367b939132.js  athena-8ed591367b939132.js.br  athena-98bbf0e28a7e793e.js  athena-98bbf0e28a7e793e.js.br  athena-a8b5b0b77e3b9be3.js  athena-a8b5b0b77e3b9be3.js.br  athena-af866bf6dccc6d50.js  athena-af866bf6dccc6d50.js.br  athena-ce9ab1c21c492b5a.js  athena-ce9ab1c21c492b5a.js.br  athena-dcf6ae7dec8df384.js  athena-dcf6ae7dec8df384.js.br  athena-dfaf7eee7066c45a.js  athena-dfaf7eee7066c45a.js.br  athena-fed713a0e8ca114a.js  athena-fed713a0e8ca114a.js.br  athena_bg-057ab8d5a5f43ef7.wasm  athena_bg-057ab8d5a5f43ef7.wasm.br  athena_bg-0adba35f728ee5e5.wasm  athena_bg-0adba35f728ee5e5.wasm.br  athena_bg-0bfc1cfe95bb5746.wasm  athena_bg-0bfc1cfe95bb5746.wasm.br  athena_bg-114b5ae15df2f220.wasm  athena_bg-114b5ae15df2f220.wasm.br  (+97 more)
assets/: athena-290388de3c4abce0.js  athena-290388de3c4abce0.js.br  athena-29499f2acf7bf7af.js  athena-29499f2acf7bf7af.js.br  athena-3e033f9698884ec9.js  athena-3e033f9698884ec9.js.br  athena-4ae875f0885c055a.js  athena-4ae875f0885c055a.js.br  athena-a4f7d6bb47adb273.js  athena-a4f7d6bb47adb273.js.br  athena-a8b5b0b77e3b9be3.js  athena-a8b5b0b77e3b9be3.js.br  athena-f00e5138e93dabf2.js  athena-f00e5138e93dabf2.js.br  athena-f1b295539467dc6d.js  athena-f1b295539467dc6d.js.br  athena_bg-02a845ea0074021e.wasm  athena_bg-02a845ea0074021e.wasm.br  athena_bg-0d88db028989b6bb.wasm  athena_bg-0d88db028989b6bb.wasm.br  athena_bg-28f9611389190178.wasm  athena_bg-28f9611389190178.wasm.br  athena_bg-2cfa9eb80fe8719f.wasm  athena_bg-2cfa9eb80fe8719f.wasm.br  athena_bg-3d3e33acb71e4b77.wasm  athena_bg-3d3e33acb71e4b77.wasm.br  athena_bg-5e5c0be7093db0e0.wasm  athena_bg-5e5c0be7093db0e0.wasm.br  athena_bg-6285b73291065ba9.wasm  athena_bg-6285b73291065ba9.wasm.br  athena_bg-69278c1428856051.wasm  athena_bg-69278c1428856051.wasm.br  athena_bg-6e23c7f2c8c6b97f.wasm  athena_bg-6e23c7f2c8c6b97f.wasm.br  athena_bg-775811211cc7312e.wasm  athena_bg-775811211cc7312e.wasm.br  athena_bg-870189840823bcbe.wasm  athena_bg-870189840823bcbe.wasm.br  athena_bg-89cb0362b7a09900.wasm  athena_bg-89cb0362b7a09900.wasm.br  (+21 more)
athena/: Cargo.toml  Dioxus.toml  index.html  input.css  package-lock.json  package.json  tailwind.config.js
athena/assets/: debug.css  style.css  style.scss  tailwind.css
athena/src/: handlers.rs  main.rs  models.rs  routes.rs
athena/src/components/: agent_table.rs  agents_overview.rs  agents_table.rs  console.rs  full_page.rs  mod.rs  navbar.rs  network_log.rs  notepad.rs  panel_base.rs  placeholder_panel.rs  sidebar.rs  tartarus_overview.rs
athena/src/pages/: about.rs  agent.rs  alerts.rs  downloads.rs  home.rs  mod.rs  settings.rs
athena/src/services/: api.rs
athena/src/tartarus/: admin.rs  agent.rs  config.rs  mod.rs
athena/src/templates/: agent.html  agents.html  index.html  shell.html
athena/src/views/: authenticate.rs  home.rs  mod.rs  page.rs  swapless_page.rs
docgen/: Cargo.toml  book.toml  module.hbs
docgen/src/: main.rs
docgen/theme/: default.css  tabs.js
docker/: compose.yaml
docker/athena/: Dockerfile
docker/tartarus/: Dockerfile
hermes/: .env  Cargo.toml  build.sh  build_static.sh
hermes/.cargo/: config.toml
hermes/src/: .env  agent.rs  commands.rs  harpe.rs  helper.rs  main.rs  network.rs  scripting.rs  state.rs
hermes/src/stdlib/: crypto.rs  env.rs  fs.rs  http.rs  mod.rs  sys.rs
talaria/: ;w  Cargo.toml  client.rs
talaria/src/: api.rs  client.rs  console.rs  helper.rs  lib.rs  protocol.rs  scripting.rs  server.rs
talaria/src/stdlib/: env.rs  error.rs  fs.rs  http.rs  mod.rs  net.rs  proc.rs  sys.rs  time.rs
tartarus/: Cargo.toml  history.txt  tartarus.toml
tartarus/src/: admin.rs  agent.rs  auth.rs  binaries.rs  config.rs  console.rs  console_interface.rs  console_lib.rs  console_net.rs  cors.rs  helper.rs  main.rs  routes.rs  script.rs  scripting.rs  served_files.rs  state.rs  statistics.rs
tools/: demoAgent.sh
