[workspace]
members = [
    "athena",
    "tartarus",
    "hermes",
    "talaria",
]
resolver = "2"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.minify]
inherits = "release"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

