[package]
name = "redis_disk_storage"
version = "0.1.0"
edition = "2021"
[dependencies]
redis = { version = "0.25.4", features = ["aio", "tokio-comp"] }
tokio = { version = "1.40", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

