[package]
name = "athena"
version = "0.1.0"
authors = ["coal-rock <colebrazinski15@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# shared
anyhow = "1.0.97"
dioxus = { version = "0.6", features = ["router", "fullstack"] }
serde = { version = "1.0.219", features = ["derive"] }
talaria = { path = "../talaria" }

# client
# we should make this option, but i get compilation errors when i do, not sure what's going on.
# oh well :(
dioxus-free-icons = { version = "0.9", features = ["font-awesome-brands", "font-awesome-regular", "font-awesome-solid"] }

# server
axum = { version = "0.7", optional = true }
tokio = { version = "1.44.1", optional = true }
dioxus-cli-config = { version = "0.6", optional = true }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "dep:axum", "dep:tokio", "dep:dioxus-cli-config"]
