[package]
name = "athena"
version = "0.1.0"
authors = ["coal-rock <colebrazinski15@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
dioxus = { version = "0.6", features = ["router"] }
serde = { version = "1.0.219", features = ["derive"] }
talaria = { path = "../talaria" }
dioxus-free-icons = { version = "0.9", features = ["font-awesome-brands", "font-awesome-regular", "font-awesome-solid"] }
reqwest = { version = "0.12.15", features = ["json"] }
bytesize = "2.0.1"

[features]
default = []
web = ["dioxus/web"]
