[package]
name = "talaria"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
rustyline = "11.0"
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
