[package]
name = "talaria"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.11"
bincode = { version = "2.0.1", features = ["derive"] }
strum = "0.27"
strum_macros = "0.27"
bytesize = "2.0.1"
rhai = { version = "1.21", featues = ["sync"] }
whoami = "1.6.0"
elevated-command = "1.1.2"
toml = "0.8.22"
