[package]
name = "tartarus"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
talaria = { path = "../talaria" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
rustyline = "11.0"
anyhow = "1.0"

[[bin]]
name = "tartarus"
path = "src/main.rs"
