[package]
name = "tartarus"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5"
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
talaria = { path = "../talaria" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11.8"
rustyline = { version = "15.0.0", features = ["derive"]}
anyhow = "1.0"
toml = "0.8"
sysinfo = "0.34.2"
strum = "0.27.1"
structz-macros = "0.2.0"
figment = {version = "0.10", features = ["toml", "env"]}
